# rs-geospatial

./: .gitignore  Cargo.toml  README.md
.github/workflows/: test.yml
data/: SEPA_BATHING_WATER_POLYGONS_BNG.gpkg
src/: archive.rs  bathing_waters.rs  coord.rs  dist.rs  distance.rs  geodb.rs  geofiles.rs  geopackage.rs  main.rs  points.rs  polygons.rs  run.rs  spatial.rs  utils.rs  zipfile.rs
src/archive/: crs.rs  distance.rs
