[package]
name = "rs-geospatial"
version = "0.4.1"
edition = "2021"

[dependencies]
geo = "0.29"
proj4rs="0.1"
crs-definitions="0.3"
zip = "2.2"
tempfile = "3"
serde="1"
serde_json= "1"
rusqlite = { version = "0.32", features = ["bundled"] }
reqwest = { version = "0.12", features = ["blocking"] }
geozero={version = "0.14", features = ["with-wkb"]}